# sfml3-template

./: .env.cmake  CMakeLists.txt  release.bat  release.sh
src/: defines.hpp  main.cpp  pch.hpp
